# semantic-browser

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
corpus/: sites.yaml
docs/: dependencies.md  getting_started.md  project_plan.md  real_profiles.md  scratchpad.md
docs/benchmarks/: 2026-03-11-actionset-compare.json  2026-03-11-actionset-compare.md  2026-03-11-comparative-10-sites.md
scripts/: actionset_benchmark.py  task_harness.py
src/semantic_browser/: __init__.py  browser_manager.py  config.py  models.py  runtime.py  session.py
src/semantic_browser/cli/: commands.py  main.py
src/semantic_browser/corpus/: __init__.py  fixtures.py  metrics.py  runner.py  tasks.py
src/semantic_browser/executor/: actions.py  resolver.py  results.py
src/semantic_browser/extractor/: diff.py  engine.py  grouping.py  redaction.py  semantics.py  settle.py
src/semantic_browser/profiles/: base.py  registry.py
src/semantic_browser/service/: routes.py  schemas.py  server.py  state.py
src/semantic_browser/telemetry/: trace.py
tests/e2e/: test_cli.py  test_service.py
tests/integration/: test_action_edge_cases.py  test_blockers_unreliability.py  test_cdp_attach.py  test_delta_metrics.py  test_delta_size.py  test_google_workflow.py  test_grouping_real_sites.py  test_id_persistence.py  test_inspect_details.py  test_managed_runtime.py  test_observe_sites.py
tests/unit/: test_actions_semantics.py  test_blockers.py  test_browser_manager.py  test_corpus_metrics.py  test_delta_semantic_depth.py  test_diff.py  test_extractors_smoke.py  test_grouping.py  test_ids.py  test_profile_modes.py  test_redaction.py  test_resolver.py  test_results.py  test_runtime_attach_selection.py  test_runtime_cdp_endpoint_validation.py  test_runtime_ownership.py  test_runtime_smoke.py  test_service_state.py  test_settle_layers.py  test_validation.py
